trunk/Archive2/7c/52b93878a8441a/output
main.cpp:20:91: error: only special member functions may be defaulted
    template< class U > array_allocator(const array_allocator<U>& other) noexcept(true) = default;
                                                                                          ^
main.cpp:38:91: error: only special member functions may be defaulted
    template< class U > array_allocator(const array_allocator<U>& other) noexcept(true) = default;
                                                                                          ^
main.cpp:60:61: error: unknown type name 'U'
    void construct(pointer p, Args&&... args ) noexcept(new U(p)(std::forward<Args>(args)...)) 
                                                            ^
main.cpp:41:58: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                         ^
main.cpp:41:59: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                          ^
main.cpp:41:60: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                           ^
main.cpp:41:61: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                            ^
main.cpp:41:62: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
main.cpp:41:62: error: expected ':'
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
                                                             : 
main.cpp:41:61: note: to match this '?'
    pointer address( reference x ) const noexcept(true) {????;}
                                                            ^
main.cpp:41:62: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
main.cpp:41:62: error: expected ':'
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
                                                             : 
main.cpp:41:60: note: to match this '?'
    pointer address( reference x ) const noexcept(true) {????;}
                                                           ^
main.cpp:41:62: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
main.cpp:41:62: error: expected ':'
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
                                                             : 
main.cpp:41:59: note: to match this '?'
    pointer address( reference x ) const noexcept(true) {????;}
                                                          ^
main.cpp:41:62: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
main.cpp:41:62: error: expected ':'
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
                                                             : 
main.cpp:41:58: note: to match this '?'
    pointer address( reference x ) const noexcept(true) {????;}
                                                         ^
main.cpp:41:62: error: expected expression
    pointer address( reference x ) const noexcept(true) {????;}
                                                             ^
main.cpp:41:32: warning: unused parameter 'x' [-Wunused-parameter]
    pointer address( reference x ) const noexcept(true) {????;}
                               ^
main.cpp:42:70: error: expected expression
    const_pointer address( const_reference x ) const noexcept(true) {????;}
                                                                     ^
main.cpp:42:71: error: expected expression
    const_pointer address( const_reference x ) const noexcept(true) {????;}
                                                                      ^
main.cpp:42:72: error: expected expression
    const_pointer address( const_reference x ) const noexcept(true) {????;}
                                                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
